--- a/style2.css
+++ b/style2.css
@@ -25,6 +25,12 @@ body {
      
   }
   }
+  @media(max-width: 320px){
+    .titolo{
+      font-size: 30px !important;
+     
+  }
+  }
   .paragrafo{
     font-size:20px;
     font-family:'Raleway', serif;
@@ -50,6 +56,12 @@ body {
     background: linear-gradient(to left bottom, #fff 49%, #823A9C 50%);
   }
 
+  @media(max-width: 320px){
+    .colour-block{
+    text-align: justify;
+  }
+  }
+
   @media (max-width: 600px) {
     h1{
       margin-top: 100px;
@@ -57,11 +69,7 @@ body {
     }
     
   }
-  
-  body{
-    line-height: 1.5;
-    font-family: 'Poppins', sans-serif;
-  }
+ 
   
   
   .container{
@@ -189,7 +197,7 @@ body {
     display: none;
   }
   
-  @media (max-width: 1024px) {
+  @media screen and (max-width: 1024px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
@@ -197,7 +205,7 @@ body {
     }
   }
   
-  @media  (max-width: 1024px) {
+  @media screen and (max-width: 1024px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
       position: absolute;
