--- a/style2.css
+++ b/style2.css
@@ -173,6 +173,10 @@ body {
     overflow: hidden;
     background-color: #333;
     margin:30px;
+    border-radius: 10px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+
+
   }
   
   .topnav a {
@@ -183,7 +187,7 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
+    }
   
   .topnav a:hover {
     background-color: #ddd;
@@ -234,6 +238,8 @@ body {
      
   }
   }
+
+  
   
  
 
