create a new pages
bug fix

--- a/style2.css
+++ b/style2.css
@@ -175,7 +175,7 @@ body {
     margin:30px;
     border-radius: 10px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
-
+    text-align: center !important;
 
   }
   
@@ -195,14 +195,24 @@ body {
   }
   
   .topnav a.active {
+    background-color: transparent;
     color: white;
+  }
+  .topnav a.active:hover {
+    background-color: #272727;
+  
+
+  }
+
+  .topnav a link:hover{
+    background-color: #272727;
   }
   
   .topnav .icon {
     display: none;
   }
   
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1176px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
@@ -226,11 +236,16 @@ body {
   }
 
   .link{
-  text-align: center !important;
+  
   padding-right: 200px !important;
   font-size: 22px !important;
   }
-
+  @media(max-width: 400px){
+    .link{
+      padding-right: 0px;
+      
+  }
+  }
 
   @media(max-width: 400px){
     .titolo{
